fix gap between project divs

--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ form button {
 }
 
 
+
+
 nav {
 
     display: flex;
@@ -81,7 +83,8 @@ nav a:hover {
 
     .projects {
 
-        margin-top: 0.5rem;
+        margin: 0.5rem 2rem;
+
 
         display: flex;
         flex-direction: column;
